头发乱了吗

--- a/love.html
+++ b/love.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>three.js css3d - periodic table</title>
+		<title>爱你</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -119,9 +119,9 @@
 		<script src="js/CSS3DRenderer.js"></script>
 
 		<div id="container"></div>
-		<div id="info">　　Love this thing, never humble.</div>
+		<div id="info">Love this thing, never humble.</div>
 		<div id="menu">
-			<button id="table">　　I want to grow old with you together.</button>
+			<button id="table">I want to grow old with you together.</button>
 			<span id="sphere"></span>
 			<span id="helix"></span>
 			<span id="grid"></span>
